Bug 423345: Use mIsCreatingPrintPreview, not mIsDoingPrintPreview, to check if we're setting up a print-preview page.  r+sr=vlad a=blocking1.9+